# weather-smartapp

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  advanced-deploy.md  docker-compose.dev.yml  docker-compose.yml  example.env  pyproject.toml  setup.cfg
.github/workflows/: actions.yml
app/: logger.py  main.py  settings.py
app/api/endpoints/: botx.py
app/api/error_handlers/: server_unknown.py
app/bot/: bot.py  smartapp.py
app/bot/commands/: common.py  debug.py  weather.py
app/bot/dependencies/: crud.py
app/bot/error_handlers/: internal_error.py
app/bot/middlewares/: db_session.py
app/bot/rpc/: methods.py
app/db/: events.py
app/db/botx/: models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0a9e32426de3_user_city.py  467c2429254b_model_user.py
app/db/weather/: models.py  repo.py
app/resources/: strings.py
app/schemas/: user.py  weather.py
app/services/: botx_user_search.py  static_files.py  weather_api.py
app/settings/: events.py  logger.py
app/settings/environments/: base.py  dev.py  prod.py  test.py
smartapp_files/static/: asset-manifest.json  index.html
smartapp_files/static/static/css/: main.58b8580e.chunk.css  main.58b8580e.chunk.css.map  main.afb920da.chunk.css  main.afb920da.chunk.css.map  main.b9847491.chunk.css  main.b9847491.chunk.css.map  (+2 more)
tests/: conftest.py
tests/fixtures/: database.py  docker.py
tests/test_api/test_endpoints/: test_botx.py
tests/test_bot/: .coverage
tests/test_bot/test_commands/: test_common.py
tests/test_settings/: test_config.py  test_logging.py
(+25 files in other folders)
