# https://python-poetry.org/docs/

[tool.poetry]
name = "weather-smartapp"
version = "0.1.0"
description = "weather_smartapp"
authors = []


[tool.poetry.dependencies]
python = "~3.9"

pybotx = "~0.32.0"
pybotx-smartapp-rpc = "~0.3.0"

fastapi = "~0.70.1"
uvicorn = "~0.16.0"

aioredis = "~1.3.1"
loguru = "~0.6.0"
mako = "~1.1.4"
pydantic = { version = "~1.8.2", extras = ["dotenv"] }

alembic = "~1.7.5"
SQLAlchemy = "~1.4.28"
asyncpg = "~0.25.0"  # DB backend for application
psycopg2-binary = "~2.9.2"  # DB backend for alembic (migration tool)


[tool.poetry.dev-dependencies]
add-trailing-comma = "2.2.1"
autoflake = "1.4.0"
black = "21.12b0"
isort = "5.10.1"
mypy = "0.910.0"
wemake-python-styleguide = "0.16.0"
click = "8.0.1"
bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837

# TODO: Add pytest


[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
